--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://unpkg.com/@notus-pro/react@1.0.1/tailwind.min.css">
+    <script src="https://kit.fontawesome.com/e0592d95bc.js" crossorigin="anonymous"></script>
+    <title>Pentagon Business Com</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
