--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/ui.css" rel="stylesheet">
+    <link href="assets/css/responsive.css" rel="stylesheet">
+
+    <link href="assets/css/all.min.css" rel="stylesheet">
+    <script src="assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+
+    <!--    -->
+
     <link rel="stylesheet" href="https://unpkg.com/@notus-pro/react@1.0.1/tailwind.min.css">
     <script src="https://kit.fontawesome.com/e0592d95bc.js" crossorigin="anonymous"></script>
     <title>Pentagon Business Com</title>
