--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,11 +25,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/ui.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
-
     <link href="assets/css/all.min.css" rel="stylesheet">
+
     <script src="assets/js/jquery.min.js" type="text/javascript"></script>
     <script src="assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 
