--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,19 +25,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/ui.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
-    <link href="assets/css/all.min.css" rel="stylesheet">
+<!--    <link href="assets/css/all.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="https://unpkg.com/@notus-pro/react@1.0.1/tailwind.min.css">
 
-    <script src="assets/js/jquery.min.js" type="text/javascript"></script>
-    <script src="assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 
     <!--    -->
 
-    <link rel="stylesheet" href="https://unpkg.com/@notus-pro/react@1.0.1/tailwind.min.css">
+
+    <script src="assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <script src="https://kit.fontawesome.com/e0592d95bc.js" crossorigin="anonymous"></script>
     <title>Pentagon Business Com</title>
   </head>
@@ -54,5 +55,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+
   </body>
 </html>
